<resources>
    <string name="app_name">PryCalificaciones</string>
    <string name="btnNoti">Notificaciones</string>
    <string name="btnPerfil">Perfil</string>
    <string name="btnCali">Calificaciones</string>
    <string name="lblCali">Promedio</string>
    <string name="lblPerfil">Perfil</string>
    <string name="lblNoti">Notificaciones</string>
    <string name="kkdvk">kkdvk</string>
    <string name="logo_desc">Imagen de la UNPA</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="sem1">Primer Semestre</string>
    <string name="sem2">Segundo Semestre</string>
    <string name="sem3">Tercer Semestre</string>
    <string name="sem4">Cuarto Semestre</string>
    <string name="sem5">Quinto Semestre</string>
    <string name="sem6">Sexto Semestre</string>
    <string name="sem7">Séptimo Semestre</string>
    <string name="sem8">Octavo Semestre</string>
    <string name="sem9">Noveno Semestre</string>
    <string name="sem10">Décimo Semestre</string>
    <string name="txtSemestreSeleccionado">Semestre</string>

    <string-array name="semestres_array">
        <item>Primero</item>
        <item>Segundo</item>
        <item>Tercero</item>
        <item>Cuarto</item>
        <item>Quinto</item>
        <item>Sexto</item>
        <item>Séptimo</item>
        <item>Octavo</item>
        <item>Noveno</item>
        <item>Décimo</item>
    </string-array>

    <string name="txtTitulo">Mi perfil</string>
    <string name="txtSubtitulo">Información personal</string>
    <string name="txtSeguridad">Seguridad</string>
    <string name="btnCambiarPass">Cambiar contraseña</string>
    <string name="btnConectarFb">Conectar con Facebook</string>
</resources>