<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Perfil"
    tools:layout_editor_absoluteX="6dp"
    tools:layout_editor_absoluteY="-208dp">

    <!-- Encabezado con promedio -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tvPerfil"
        android:layout_width="0dp"
        android:layout_height="58dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTitulo"
            android:layout_width="167dp"
            android:layout_height="31dp"
            android:layout_marginStart="4dp"
            android:fontFamily="serif"
            android:text="@string/txtTitulo"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="29dp"
            android:layout_height="26dp"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
            app:srcCompat="@drawable/cuenta" />

        <TextView
            android:id="@+id/txtSubtitulo"
            android:layout_width="141dp"
            android:layout_height="23dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="36dp"
            android:text="@string/txtSubtitulo"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/txtTitulo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cntInfo"
        android:layout_width="378dp"
        android:layout_height="88dp"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPerfil">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/txtNombreAlumno"
                android:layout_width="200dp"
                android:layout_height="21dp"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="TextView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtTipoAlumno"
                android:layout_width="164dp"
                android:layout_height="20dp"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="TextView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/txtNombreAlumno"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


     </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/tvSeguridad"
        android:layout_width="0dp"
        android:layout_height="58dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cntInfo">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="31dp"
            android:layout_height="26dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/cerrar_con_llave" />

        <TextView
            android:id="@+id/txtSeguridad"
            android:layout_width="95dp"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/txtSeguridad"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="372dp"
        android:layout_height="111dp"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSeguridad">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="372dp"
            android:layout_height="111dp">

            <Button
                android:id="@+id/btnCambiarPass"
                android:layout_width="344dp"
                android:layout_height="28dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/btnCambiarPass"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnConectarFb"
                android:layout_width="344dp"
                android:layout_height="28dp"
                android:layout_marginTop="13dp"
                android:background="@color/white"
                android:gravity="center"
                android:text="@string/btnConectarFb"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.571"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCambiarPass" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:itemIconTint="@color/nav_item_color_state"
        app:itemTextColor="@color/nav_item_color_state"
        app:menu="@menu/menu" />


</androidx.constraintlayout.widget.ConstraintLayout>